Reduced H1 and H2 font size. This is to address the word wrapping issue on the Troubleshooting pages.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,10 +30,10 @@
     --ifm-font-size-base: 16px;
   }
   article header h1 {
-    font-size: 3.5rem !important;
+    font-size: 2.8rem !important;
   }
   article h2 {
-    font-size: 2.25rem !important;
+    font-size: 2rem !important;
   }
   article h3 {
     font-size: 1.35rem !important;
